# hearts

./: SDL_test.c  Shuffle.c  game  heart-rules.txt  main.c  playerfunction.c  snal  test.h
Pokerstarts.xcodeproj/: project.pbxproj
Pokerstarts.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Pokerstarts.xcodeproj/project.xcworkspace/xcuserdata/MarioAdmin.xcuserdatad/: UserInterfaceState.xcuserstate
Pokerstarts.xcodeproj/xcuserdata/MarioAdmin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Pokerstarts.xcodeproj/xcuserdata/MarioAdmin.xcuserdatad/xcschemes/: Pokerstarts.xcscheme  xcschememanagement.plist
client/: README.txt  UDP_login_client.c  encrypt.h  game.c  game.h  gameklient.c  klientacksyn.c  logic.c  logic.h  login_client.c  mainClient.c  makefile  test_server_gameklienten.c  window.h
client/GK_mario/: GK_mario.cbp  GK_mario.depend  GK_mario.layout  cardPosition.c  cardPosition.h  cardStruct.h  game.c  game.h  includes.h  ip.txt  libraries.h  loadCard.c  loadMedia.c  loadMedia.h  logik.c  logik.h  mainClient.c  moveCard.c  openWeb.c  position.c  position.h  recieve.c  recieve.h  resolution.h  send.c  send.h
client/GK_mario/Gameklient.xcodeproj/: project.pbxproj
client/GK_mario/Gameklient.xcodeproj/xcuserdata/MarioAdmin.xcuserdatad/xcschemes/: xcschememanagement.plist
client/GK_mario/cmake/: CMakeLists.txt
client/SDL_ttf_test/: SDL_ttf_test.cbp  SDL_ttf_test.depend  SDL_ttf_test.layout  main.c  test_2.c  ttf_hello_world.c
client/game_client/: CMakeLists.txt  button.h  buttonStruct.h  cardPosition.c  game.c  game_client.cbp  game_client.depend  game_client.layout  includes.h  loadCard.c  loadCard.h  logik.c  logik.h  mainClient.c  moveCard.c  position.c  recieve.c  recieve.h  rendering.c  resetTurn.c  send.c  send.h
client/projekarbete_kortspel/: Button.c  CMakeLists.txt  SDL_test.c  cardPosition.c  cardPosition.h  cardStruct.h  game.h  includes.h  loadCard.c  loadCard.h  loadMedia.c  loadMedia.h  logik.c  logik.h  mainClient.c  moveCard.c  moveCard.h  openWeb.c  openWeb.h  position.c  position.h  projekarbete_kortspel  projekarbete_kortspel.cbp  projekarbete_kortspel.depend  projekarbete_kortspel.layout  recieve.c  recieve.h  rendering.c  rendering.h  resetTurn.h  resolution.h  send.c  send.h  udpc.c  window.c  window.h
client/projekarbete_kortspel/Gameklient.xcodeproj/xcuserdata/MarioAdmin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
client/projekarbete_kortspel/binaries/: CMakeCache.txt  Makefile  cmake_install.cmake
client/scrapfiles/: Button.c  button.h  encrypt.c  initialize.c  initialize.h  libraries.h
client/scrapfiles/projekarbete_kortspel/: cardPosition.h  game.c  includes.h  loadCard.h  loadMedia.c  logik.c  mainClient.c  openWeb.h  projekarbete_kortspel.depend  recieve.h  rendering.c
client/scrapfiles/projekarbete_kortspel/Gameklient.xcodeproj/project.xcworkspace/xcuserdata/MarioAdmin.xcuserdatad/: UserInterfaceState.xcuserstate
client/scrapfiles/projekarbete_kortspel/Gameklient.xcodeproj/xcuserdata/MarioAdmin.xcuserdatad/xcschemes/: Gameklient.xcscheme
client/syn-ack_client/: game.h  login_client.c
cmake/: CMakeLists.txt  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
projekarbete_kortspel/: SDL_test.c  cardPosition.c  cardPosition.h  loadCard.h  loadMedia.c
server/: CMakeLists.txt  InetS.c  InetS3.c  account.c  account.h  card.h  compserver  encrypt.c  encrypt.h  game.c  game.h  gameserver  gameserver.c  gameserver.c.save  kill_server.sh  makefile  makefile_  nextplayer.c  players.c  players.h  port_hearts.c  port_hearts.h  projekt  projektInetS.c  serve  serve_client  serve_client.c  server  server.c  server2.c  syn-ack-server  test
